--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.8.31",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
+    "history": "^5.0.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "lodash": "^4.17.19",
