--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,24 +4,19 @@ on:
   push:
     branches:
       - release
-    paths:
-      - release-version
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
       - uses: actions/setup-go@v1
         with:
           go-version: "1.13.5"
-      - name: Check release version
-        run: |
-          git diff --name-only --exit-code ./release-version || (echo "Update the release version file" && false)
       - name: Lookup yarn cache
         id: yarn_cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
