--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@umijs/hooks": "^1.9.3",
     "@welldone-software/why-did-you-render": "^4.2.7",
     "ace-builds": "^1.4.12",
+    "ahooks": "^2.9.2",
     "antd": "~4.8.5",
     "axios": "^0.19.0",
     "bulma": "^0.9.0",
